modifications controllers user

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-DATABASE_URL = "mongodb+srv://SallyAK:GLEb58YpHj8sriaV@cluster0.lgef0.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://SallyAK:o9sH4D3CuhXU9D9T@cluster0.lgef0.mongodb.net/?retryWrites=true&w=majority"
 
 JWT=password
