--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.0.1",
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "mongoose-unique-validator": "^3.0.0",
